# FileOrganizerLLM

./: .gitignore  FileOrganizer.py  README.md  config.yaml.example  pyproject.toml  requirements.txt  view_folders.py
file_organizer/: __init__.py  __main__.py  llm_provider.py  mapper.py  organizer.py  reorganizer.py
file_organizer_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/map_maker/: __init__.py  cli.py  config.py  config_loader.py  database.py  llm.py  schema.py  text_extraction.py  traversal.py
tests/: test_mapper.py  test_organizer.py  test_reorganizer.py
