[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer-llm"
version = "0.1.0"
description = "Summarize folders using a local large language model."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [{name = "FileOrganizerLLM"}]
dependencies = [
    "python-docx",
    "openpyxl",
    "python-pptx",
    "PyPDF2",
    "langchain",
    "langchain-community",
    "openai",
]

[project.scripts]
file-organizer = "file_organizer.organizer:main"
