[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "map-maker"
version = "0.1.0"
description = "Semantic folder persona builder"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.24",
  "python-docx>=1.1",
  "pypdf>=4.0",
  "pyyaml>=6.0",
  "fireworks-ai>=0.15",
]

[project.scripts]
map-maker = "map_maker.cli:main"
